--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Install Visual Studio Build Tools
       run: |
-        choco install visualstudio2019buildtools --version=16.11.3 --params "'/NoWeb'"
+        choco install visualstudio2019buildtools --version=16.11.3
 
     - name: Build PortAudio
       run: |
@@ -41,7 +41,7 @@ jobs:
     - name: List Build Output
       run: |
         cd portaudio/build/Release
-        dir  # List files in the Release directory
+        dir
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4
